--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
     "cropperjs": "^1.5.13",
+    "framer-motion": "^9.1.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-cropper": "^2.1.8",
