--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
