--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://aaronquinn:quinn@twitterclonecluster.y7xn7qx.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET="GsSSm5SnXGPPcv8nzYJf"
+PORT='5000'
